# toradb

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASING.md  pyproject.toml
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
apps/platform/: README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/platform/app/: globals.css  layout.tsx
apps/platform/components/: confirm-dialog.tsx  data-table.tsx  explain-panel.tsx  global-search.tsx  highlighted-snippet.tsx  ingest-job-progress.tsx  platform-shell.tsx  query-metrics-card.tsx  sql-bar-chart.tsx  sql-editor.tsx  table-search-input.tsx  toast-provider.tsx
apps/platform/stores/: chat-store.ts  llm-settings-store.ts  platform-store.ts
crates/toradb-api/: Cargo.toml
crates/toradb-api/src/: chat_api.rs  lib.rs  pipe_api.rs
crates/toradb-cli/: Cargo.toml
crates/toradb-cli/src/: main.rs
crates/toradb-core/: Cargo.toml
crates/toradb-core/src/: arena.rs  batch.rs  candidate.rs  catalog.rs  compression.rs  exec_ctx.rs  ingest.rs  lib.rs  metrics.rs  provenance.rs  quant.rs  schema.rs  typed_compare.rs
crates/toradb-core/tests/: exec_ctx_test.rs
crates/toradb-distributed/: Cargo.toml
crates/toradb-distributed/src/: client.rs  config.rs  coordinator.rs  lib.rs  protocol.rs  rpc.rs  worker.rs
crates/toradb-distributed/tests/: cluster_rpc_test.rs  config_yaml_test.rs
crates/toradb-engine/: Cargo.toml
crates/toradb-engine/examples/: tq_validate.rs
crates/toradb-engine/src/: adaptive.rs  advanced.rs  arrow_batch.rs  dag.rs  fusion.rs  hf_transfer.rs  index_build_status.rs  ingest_file.rs  ingest_hf.rs  join.rs  lib.rs  lowering.rs  materialized.rs  metadata_filter.rs  olap.rs  operator.rs  persist.rs  rerank.rs  scalar.rs  scheduler.rs  snippets.rs  sql_exec.rs  table_search.rs
crates/toradb-engine/tests/: bm25_sidecar_test.rs  bulk_ingest_test.rs  cache_test.rs  catalog_persist_test.rs  columnar_scan_test.rs  compact_table_test.rs  create_index_test.rs  delete_test.rs  dense_strategy_test.rs  describe_indexes_test.rs  diskann_sidecar_test.rs  distributed_segments_test.rs  drop_table_test.rs  facet_bench.rs  faceted_search_test.rs  fetch_documents_test.rs  highlight_test.rs  hnsw_segment_sidecar_test.rs  hnsw_sidecar_test.rs  learned_sparse_test.rs  list_tables_test.rs  msmarco_bmw_bench.rs  msmarco_query_perf_test.rs  numa_scheduler_test.rs  olap_groupby_test.rs  persist_reload_test.rs  provenance_test.rs  quant_sidecar_test.rs  query_expressiveness_test.rs  ranking_knobs_test.rs  resume_mid_finish_test.rs  scalar_functions_test.rs  scan_select_test.rs  segment_only_test.rs  segment_workers_test.rs  show_tables_row_count_test.rs  sql_advanced_retrieval_test.rs  sql_diskann_search_test.rs  sql_explain_test.rs  sql_join_test.rs  (+14 more)
crates/toradb-index/: Cargo.toml
crates/toradb-index/src/: corpus.rs  index_blob.rs  lib.rs  runtime.rs
crates/toradb-index/tests/: bm25_bench.rs  bm25_mmap_golden_test.rs  bm25_test.rs  hnsw_test.rs  sparse_bench.rs  tbm3_bench.rs  tier1_test.rs
crates/toradb-pipe/: Cargo.toml
crates/toradb-pipe/src/: auth.rs  lib.rs  model.rs  pipeline.rs  scheduler.rs  secret.rs  store.rs
crates/toradb-pipe/src/embed/: http.rs  mod.rs
crates/toradb-pipe/src/source/: http.rs  mod.rs  pg_cdc.rs  sql.rs
crates/toradb-pipe/tests/: sync_sqlite.rs
crates/toradb-sdk/: Cargo.toml
crates/toradb-sdk/src/: arrow_ingest.rs  database.rs  lib.rs  table.rs
crates/toradb-simd/: Cargo.toml  README.md
crates/toradb-simd/benches/: bitmap_bench.rs  decompress_bench.rs  dot_f32_bench.rs  fht_bench.rs  tq_adc_bench.rs
crates/toradb-simd/src/: bitmap.rs  decompress.rs  dispatch.rs  distance.rs  fht.rs  lib.rs  tq_adc.rs
crates/toradb-simd/src/kernels/: aarch64.rs  mod.rs  scalar.rs  x86.rs
crates/toradb-sql/: Cargo.toml
crates/toradb-sql/src/: ast.rs  binder.rs  catalog.rs  catalog_store.rs  format.rs  lexer.rs  lib.rs  parser.rs
crates/toradb-sql/tests/: binder_index_test.rs  parse_alter_column_type_test.rs  parse_alter_segment_workers_test.rs  parse_compound_where_test.rs  parse_ddl_test.rs  parse_delete_test.rs  parse_distributed_test.rs  parse_explain_test.rs  parse_facets_test.rs  parse_functions_test.rs  parse_groupby_test.rs  parse_highlight_test.rs  parse_hybrid_test.rs  parse_join_test.rs  parse_materialized_view_test.rs  parse_offset_test.rs  parse_order_by_test.rs  parse_ranking_test.rs  parse_show_materialized_views_test.rs  parse_sparse_search_test.rs  parse_stream_test.rs  parse_vector_search_test.rs  (+1 more)
crates/toradb-storage/: Cargo.toml
crates/toradb-storage/benches/: segment_read.rs
crates/toradb-storage/src/: cache.rs  compaction.rs  io.rs  lib.rs  manifest.rs  numa.rs  segment.rs  snapshot.rs  wal.rs
crates/toradb-storage/src/columnar/: manifest.rs  metadata_codec.rs  mod.rs  reader.rs  schema.rs  typed_schema.rs  writer.rs
crates/toradb-storage/tests/: columnar_roundtrip_test.rs  compression_roundtrip_test.rs  io_uring_test.rs  manifest_swap_test.rs  typed_segment_roundtrip_test.rs  wal_checkpoint_test.rs  wal_test.rs
demo/: run.sh
demo/api/: main.py  requirements.txt
demo/scripts/: ingest_open_data.py  requirements-ingest.txt
demo/web/: index.html  package-lock.json  package.json
docs/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  QUICKSTART.md  README.md  SECURITY.md
examples/: README.md  cluster.yaml  full_example.py
examples/data/: sample_tesla.txt
mdx/: README.md  development.mdx  docs.json  index.mdx  install.mdx  quickstart.mdx  style.css
mdx/api-reference/: introduction.mdx
mdx/community/: code-of-conduct.mdx  contributing.mdx  security.mdx
mdx/concepts/: on-disk-layout.mdx  overview.mdx  table-modes.mdx
mdx/guides/: cli.mdx  cluster.mdx  ingest.mdx  platform-chat.mdx  production-serving.mdx  provenance.mdx  python.mdx  reindex-compact.mdx  search.mdx  sql.mdx  typed-columns.mdx
python/toradb/: __init__.py  cli.py  client.py  dataframe.py  embeddings.py  graph.py  ingest.py  local.py  query.py  sql.py  table.py  types.py
scripts/: bench_simd.sh
tests/: python_smoke.py  test_embeddings.py
(+90 files in other folders)
