[workspace]
resolver = "2"
members = [
    "crates/toradb-core",
    "crates/toradb-simd",
    "crates/toradb-storage",
    "crates/toradb-index",
    "crates/toradb-engine",
    "crates/toradb-sql",
    "crates/toradb-sdk",
]
# toradb-sdk is a Python cdylib; build it with maturin or `cargo build -p toradb-sdk`.
default-members = [
    "crates/toradb-core",
    "crates/toradb-simd",
    "crates/toradb-storage",
    "crates/toradb-index",
    "crates/toradb-engine",
    "crates/toradb-sql",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
toradb-core = { path = "crates/toradb-core" }
toradb-simd = { path = "crates/toradb-simd" }
toradb-storage = { path = "crates/toradb-storage" }
toradb-index = { path = "crates/toradb-index" }
toradb-engine = { path = "crates/toradb-engine" }
toradb-sql = { path = "crates/toradb-sql" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rkyv = { version = "0.8.16", features = ["std", "bytecheck"] }
memmap2 = "0.9"
arrow = { version = "58.3.0", default-features = false, features = ["ipc"] }
parquet = { version = "58.3.0", default-features = false, features = ["arrow"] }
rayon = "1.12.0"
