[workspace]
resolver = "2"
members = [
    "crates/toradb-core",
    "crates/toradb-simd",
    "crates/toradb-storage",
    "crates/toradb-index",
    "crates/toradb-distributed",
    "crates/toradb-engine",
    "crates/toradb-sql",
    "crates/toradb-sdk",
    "crates/toradb-cli",
    "crates/toradb-api",
]
# toradb-sdk is a Python cdylib; build it with maturin or `cargo build -p toradb-sdk`.
default-members = [
    "crates/toradb-core",
    "crates/toradb-simd",
    "crates/toradb-storage",
    "crates/toradb-index",
    "crates/toradb-engine",
    "crates/toradb-sql",
    "crates/toradb-cli",
    "crates/toradb-api",
]

[workspace.package]
version = "0.1.0-alpha.1"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
toradb-core = { path = "crates/toradb-core" }
toradb-simd = { path = "crates/toradb-simd" }
toradb-storage = { path = "crates/toradb-storage" }
toradb-index = { path = "crates/toradb-index" }
toradb-distributed = { path = "crates/toradb-distributed" }
toradb-engine = { path = "crates/toradb-engine" }
toradb-sql = { path = "crates/toradb-sql" }
toradb-api = { path = "crates/toradb-api" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rkyv = { version = "0.8.16", features = ["std", "bytecheck"] }
memmap2 = "0.9"
arrow = { version = "58.3.0", default-features = false, features = ["ipc"] }
parquet = { version = "58.3.0", default-features = false, features = ["arrow", "snap", "zstd"] }
rayon = "1.12.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["fs", "trace"] }
