[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "toradb"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
toradb = "toradb.cli:main"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "toradb._toradb_sdk"
python-source = "python"
manifest-path = "crates/toradb-sdk/Cargo.toml"
