[package]
name = "toradb-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toradb-core = { workspace = true }
toradb-engine = { workspace = true }
toradb-sql = { workspace = true }
toradb-pipe = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { version = "0.8", features = ["multipart"] }
tower-http = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures-util = "0.3"
