[package]
name = "toradb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toradb-ingest"
path = "src/main.rs"

[dependencies]
toradb-core = { workspace = true }
toradb-engine = { workspace = true }
toradb-storage = { workspace = true }
clap = { version = "4", features = ["derive"] }
arrow = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
