[package]
name = "toradb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "toradb-ingest"
path = "src/main.rs"

[dependencies]
toradb-core = { workspace = true }
toradb-distributed = { workspace = true }
toradb-engine = { workspace = true }
toradb-index = { workspace = true }
toradb-simd = { workspace = true }
toradb-storage = { workspace = true }
toradb-api = { workspace = true }
clap = { version = "4", features = ["derive"] }
arrow = { workspace = true }
parquet = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
indicatif = "0.18"
