[package]
name = "toradb-distributed"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toradb-core = { workspace = true }
toradb-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

[dev-dependencies]
tempfile = "3"
