[package]
name = "toradb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toradb-core = { workspace = true }
toradb-simd = { workspace = true }
toradb-storage = { workspace = true }
toradb-index = { workspace = true }
toradb-sql = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
tempfile = "3"
