[package]
name = "toradb-engine"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toradb-core = { workspace = true }
toradb-simd = { workspace = true }
toradb-storage = { workspace = true }
toradb-index = { workspace = true }
toradb-sql = { workspace = true }
toradb-distributed = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rayon = { workspace = true }
memmap2 = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util", "time", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
futures = "0.3"
rand = "0.9"

[features]
simd-neon = ["toradb-simd/neon"]
simd-avx2 = ["toradb-simd/avx2"]
simd-avx512 = ["toradb-simd/avx512"]

[dev-dependencies]
tempfile = "3"

[[example]]
name = "tq_validate"
path = "examples/tq_validate.rs"
