[package]
name = "toradb-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "toradb_sdk"
crate-type = ["cdylib"]

[dependencies]
toradb-core = { workspace = true }
toradb-engine = { workspace = true }
toradb-index = { workspace = true }
toradb-sql = { workspace = true }
toradb-storage = { workspace = true }
pyo3 = { version = "0.28", features = ["extension-module"] }
pyo3-arrow = { version = "0.17", default-features = false }
arrow = { workspace = true, default-features = false }

[dev-dependencies]
arrow = { workspace = true, default-features = false, features = ["ipc"] }
