[package]
name = "toradb-simd"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
avx2 = []
avx512 = []
neon = []

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dot_f32_bench"
harness = false

[[bench]]
name = "decompress_bench"
harness = false

[[bench]]
name = "bitmap_bench"
harness = false

[[bench]]
name = "fht_bench"
harness = false

[[bench]]
name = "tq_adc_bench"
harness = false
