[package]
name = "toradb-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
toradb-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
arrow = { workspace = true }
parquet = { workspace = true }

[dev-dependencies]
toradb-core = { workspace = true }
